<resources>
    <string name="app_name">车联助手 X</string>
    <string name="about_version">1.2.3</string>
    <string name="app_intro">酷安 @高东假</string>
    <string name="about">
        【使用即默认同意并遵守以下条款】
        \n道路千万条，安全第一条！请注意安全驾驶！
        \n请勿在行驶中使用本软件！
        \n因使用本软件产生的一切后果
        \n由使用者自行承担，与作者及软件无关！
        \n本软件不得用于商业用途，仅做学习交流！
        \n如果您是付费购买请退款！！！！！
    </string>
    <string name="update_log">
        【更新日志】
        \n【车联助手 X】 1.2.2
        \n【车联助手 X】 1.0
        \n本次改动代码过大，升级请务必重新安装！
        \n【全新助手上线】
        \n1.更加直观易用、使用更友好
        \n2.添加说明书(待编辑)、常见问题、版本显示等
        \n3.服务界面完全分离。
        \n4.核心代码重构，清理无用代码资源，优化内存使用，省电优化
        \n5.解决无数bug，提高稳定性，包括不限于无障碍
        \n【车联助手】 14.3
        \n1.修改部分代码，为新版车联服务做铺垫
        \n【UI】
        \n1.针对新手经行优化,加入设置向导
        \n【音乐服务】
        \n1.移除通过状态栏抓取专辑封面，移除代码
        \n2.优化音乐服务相关代码
        \n【通知服务】
        \n1.更改白名单后重启应用生效
        \n2.修改优化性能，减少内存使用省电。
        \n【实验室】
        \n1.移除锁屏卡BUG
        \n2.添加模拟黑屏，曲线解决移植锁屏车机黑屏问题。OneUi5 Beta3 问题
        \n【车联助手】 14.2.3
        \n1.适配高德车机版小插件4x2插件点击后默认车机端打开
        \n【车联助手】 14.2.2
        \n1.紧急修复打电话卡bug功能
        \n【车联助手】 14.2.1
        \n1.添加打电话卡BUG
        \n2.稳定无障碍权限
        \n【车联助手】 14.2
        \n1.优化无触控车机体验(车联遥控器已完成)
        \n2.权限检查
        \n3.应用清单调整
        \n4.UI调整
        \n5.稳定性测试
        \n【车联助手】 14.1.1
        \n如下新特性需搭配车联服务1.5以上使用
        \n1.实验室功能:默认启动设置更改为：车联助手
        \n1.实验室功能:默认启动延迟更改为：2秒
        \n2.实验室功能:添加权限检测
        \n3.实验室功能:非必要后台不运行，更省电
        \n4.移除自动拨打电话卡BUG功能
        \n4.1.添加启动锁屏卡BUG功能
        \n4.2.启动打电话卡BUG功能方案待定
        \n5.添加遥控助手：一键投屏，支持非触控车机！
        \n6.修复潜在得可能掉无障碍问题，还是可能掉。
        \n7.助手更改为隐藏任务卡片，连接车机时请勿点“关闭全部”或者关闭助手后台卡片。
        \n【车联助手】 13.6
        \n1.侧栏助手：添加收起时可移动，展开归位。
        \n2.添加实验室功能，测试功能。无差别启动
        \n3.修复部分开启直接闪退BUG
        \n【车联助手】 13.5
        \n1.高德地图-UCAR兼容模式-与助手对接适配，修复界面问题
        （喜欢用高德地图的小伙伴可以下载噢！适配修改版本请百度网盘下载）
        手机版设置导航后，直接车机上通过助手打开即可继续导航！
        \n2.播放控制器修改
        \n3.BUG修复（闪退）
        \n【车联助手】 13.4
        \n1.侧栏助手图标统一风格更新
        \n2.BUG修复
        \n【车联助手】 13.3.1 -打磨版
        \n1.添加兼容模式：华为模式 （仅适配了酷狗手机版）
        \n2.侧栏助手：添加原生Carlife主页按钮
        \n3.侧栏助手：添加清理后台按钮
        \n4.侧栏助手：自动删设置bug修复
        \n【车联助手】 13.3 -打磨版
        \n1.添加兼容模式支持（百度地图，高德地图）
        \n【车联助手】 13.2 -打磨版- 强烈建议更新
        \n1.音乐镜像服务深入对接：连接车机后后，自动开启音乐镜像服务。手机或车机端直接开启播放器即可自动抓取
        \n （需首次在设置中开启镜像服务并播放使首页切换为助手的音乐卡片后生效！）
        \n 断开连接后：（车联服务-1.0）：如使用过助手，则与助手同时关闭服务，否则下一次锁屏自动关闭服务，或手动点击通知栏信息关闭
        \n（车联服务-1.5）：断联自动关闭所有服务（深度适配）。
        \n2.稳定问题修复
        \n3.自动检测更新：仅在手机设置界面时检测。
        \n4.自动更新使用须知及使用方法（在线更新）
        \n【车联助手】 13.1
        \n1.音乐服务预启动（可配合bixby日常等宏使用，无需开启助手，预先开启音乐服务）
        \n2.音乐镜像服务：
        \n 退出车机界面或断开Carlife连接时，助手会自动关闭并关闭音乐镜像服务
        \n 使用预启动开启服务后，如进入助手车机界面则行为同上，如独立使用镜像服务，断连后需手动关闭服务：点击通知栏镜像服务的通知，或通过其他方式强制停止助手一次。
        \n3.细节使用体验优化
        \n4.侧栏助手应用支持兼容模式
        \n5.兼容模式：
        \n 兼容模式使用需自查兼容或群里询问：如百度地图手机版可以使三星兼容模式，宝宝巴士可使用三星vivo两个模式，乐听可使用vivo模式。
        \n 兼容模式启动失败会使用默认模式启动（无提示）！！
        \n 华为模式目前无效（开发中）。为默认模式
        \n【车联助手】 13.0
        \n0.适配安卓13
        \n1.升级sdk最低版本适配安卓12
        \n2.播放映射完善代码
        \n3.省电优化，低功耗优化
        \n4.播放控制器按钮颜色修复
        \n5.关闭助手自动暂停已锁定的播放器
        \n6.上帝模式更名为侧栏助手
        \n7.侧栏助手新增自定义应用，独立存在、添加返回按钮、主页按钮
        \n8.侧栏助手隐藏时会自动变为半透明状态
        \n9.删除音乐服务自启动
        \n10.移除打开助手后被选中的框状态
        \n11.播放控制器蒙板自定义透明度
        \n12.修复白色模式下背景颜色问题
        \n【车联助手】 12.8
        \n1.懒得写
        \n【车联助手】 12.7
        \n1.NotificationListener省电优化
        \n2.壁纸服务BUG解决！
        \n【车联助手】 12.6
        \n1.公开版条款
        \n【车联助手】 12.5
        \n1.卡BUG移除拨打延迟，体验完美。
        \n2.移除激活码验证，后续无需激活
        \n3.BUG解决。
        \n【车联助手】 12.1
        \n1.解决BUG
        \n2.添加自定义三个分区比例
        \n3.重写返回键逻辑
        \n4.解决关闭上帝模式后任然触发自动卡Bug的Bug
        \n5.完善设置界面说明
        \n【车联助手】至尊版 12.0.1
        \n1.优化
        \n【车联助手】至尊版 11.6
        \n1.上帝模式自动生效
        \n(上帝模式显示应用需要通过应用抽屉添加，默认5个，顺序为默认添加顺序，如需更改顺序，请开启应用抽屉功能，在抽屉中长按图标可切换位置。)
        \n【车联助手】至尊版 11.5
        \n1.修复无法关闭专辑封面bug
        \n2.稳定抓取专辑封面
        \n（QQ音乐等不支持专辑封面的应用）
        \n3.稳定推送消息（通知助手）
        \n4.优化电量使用
        \n5.添加部分使用说明及引导
        \n6.音乐镜像服务可脱离播放控制器使用，以服务形式呈现
        \n7.可直接设置：音乐镜像锁定的播放器
        \n【车联助手】至臻版 11.4
        \n1.删除已添加App无法打开（重启应用）
        \n2.长按删除小组件时间覆盖延长
        \n【车联助手】测试版 11.3
        \n1.支持小插件
        \n2.优化11.0.1不人性化的操作
        \n【车联助手】随便更新一下版 11.0.1
        \n1.修复11.0壁纸bug
        \n【车联助手】随便更新一下版 11.0
        \n1.所有卡片（音乐、地图、app）可自定义开启
        \n2.所有卡片（音乐、地图、app）可自定义位置
        \n3.跨越启动可同时启动助手
        \n4.UI更改，设置界面需在桌面长按助手图标进入
        \n5.上帝模式优化
        \n【车联助手】随便更新一下版 10.3
        \n1.上帝模式：增加时间显示
        \n2.点击时间可显示或者隐藏侧栏
        \n【车联助手】至臻版 10.2
        \1.新增上帝模式
        \n【车联助手】至臻版 10.1
        \n1.UI代码优化，部分功能返回即生效
        \n2.代码优化
        \n3.添加显示专辑封面开关
        \n4.APP添加：增加搜索功能
        \n5.添加更多，设置界面功能说明
        \n【车联助手】至臻版 10.0
        \n1.UI改版，带来更多自定义，更美观
        \n2.兼容启动模式代码调整
        \n3.播放控制器BUG解决
        \n4.代码优化，减少重启次数，设置大部分返回即生效。
        \n车联助手-最终版 【捐赠版】9.3
        \n1.极限优化性能及耗电量（定稿）
        \n2.播放器封面bug优化
        \n【车联助手】最终版-9.2
        \n1.修复打开提示安装高德地图车机版的提示
        \n2.修复音乐播放器UI并去除大黑环
        \n1.性能优化,功能重写
        \n2.(音乐卡片适配)开机自启动设置,具体查看设置
        \n3.增加“记住上次锁定的播放器”选项
        \n4.添加收到通知，在车机播放提示音开关
        \n5.自定义通知音量
        \n【车联助手】最终版-1
        \n1.BUG修复
        \n【车联助手】v8.1
        \n1.BUG修复
        \n2.新增线控兼容模式：对于老旧播放器使用线控兼容模式控制切歌等操作。
        \n【车联助手】v8.0
        \n1.修复抓取专辑封面BUG（退出后，无法重连导致无法抓取BUG）
        \n2.全面优化
        \n【车联助手】v7.9
        \n1.Bug修复
        \n【车联助手】v7.7
        \n1.Bug修复（推荐更新）
        \n2.悬浮助手支持自定义背景色
        \n3.提高播放控制器相关性能（抓取改为10s）
        \n【车联助手】v7.6
        \n1.Bug修复（推荐更新）
        \n【车联助手】v7.5
        \n1.新增通知助手（测试）
        \n2.通知助手支持应用白名单
        \n3.通知助手支持自定义透明度
        \n4.通知助手支持自定义显示时间
        \n【车联助手】v7.4
        \n1.修复触控助手点击跳动问题
        \n2.修复切歌BUG
        \n3.优化服务代码，不用不耗电，放心给无限制用电权限！
        \n4.优化部分UI
         \n【车联助手】v7.3 紧急更新
        \n1.修复悬浮助手部分bug
        \n2.修复封面部分bug
        \n【车联助手】v7.2
        \n1.修复映射bug
        \n【车联助手】v7.0
        \n1.UI重新设计
        \n2.悬浮助手支持小圆点模式
        \n3.小圆点模式支持自定义隐藏时间
        \n4.支持兼容模式，以vivo模式启动应用。
        \n5.支持兼容模式，以三星模式启动应用。
        \n6.性能优化
        \n7.抓取适配专辑封面（QQ音乐、波点音乐等自测）
        \n【车联助手】v6.3
        \n1.悬浮助手：新增一键后台清理
        \n2.修复已知BUG
        \n【车联助手】v6.2
        \n1.悬浮助手支持竖向排版
        \n2.悬浮助手支持反转布局
        \n3.播放控制器UI修改
        \n4.修复若干bug
        \n5.背景图片自动适配比例
        \n【车联助手】v5.9
        \n1.修复设置背景bug
        \n【车联助手】v5.6
        \n1.主页卡片支持自定义透明度
        \n2.设置UI已整理
        \n【车联助手】v5.5
        \n1.添加设置自定义背景功能（简易版）
        \n【车联助手】v5.4
        \n1.方向盘控制，carlife主页音乐卡片同步第三方应用，bug已修复（已测试）如有请反馈
        \n【车联助手】v5.3
        \n1.提高车机方控切换时反应速度，优化代码。
        \n2.BUG修复
        \n3.优化切换音源UI
        \n【车联助手】v5.2
        \n1.支持专辑封面
        \n2.修补bug
        \n【车联助手】v5.1
        \n1.适配黑暗模式/白天模式
        \n2.可强制黑暗模式
        \n3.新增移花接木功能，锁定音乐app后，可通过车机控制（待测试）
        \n4.可以自定义播放器左右位置
        \n【车联助手】v5.0
        \n1.新增悬浮助手
        \n2.新增全局悬浮按钮透明度可调
        \n3.新增车联助手主页图标可移动
        \n4.新增悬软件栏
        \n5.UI适配Carlife
        \n6.悬浮助手支持圆角</string>
    <string name="start_ass">无障碍辅助插件</string>
    <string name="ass_setting_label">助手设置</string>
    <string name="shortcut_start_music_service">启动音乐镜像服务(宏)</string>
    <string name="music_guide">请手机开启助手-进入设置-音乐助手-开启-镜像服务</string>
    <string name="menu_home">主页</string>
    <string name="menu_manual">说明书</string>
    <string name="menu_ui">车机界面</string>
    <string name="menu_appDrawer">应用抽屉</string>
    <string name="menu_musicHelper">音乐助手</string>
    <string name="menu_navbarHelper">导航栏助手</string>
    <string name="menu_floatHelper">小白点助手</string>
    <string name="menu_notificationHelper">通知助手</string>
    <string name="menu_boot">启动设置</string>
    <string name="menu_fs">全屏助手</string>
    <string name="menu_experiment">实验室功能</string>
    <string name="menu_dev">开发者设置</string>
    <string name="menu_update">检查更新</string>
    <string name="menu_donate">捐赠支持</string>
    <string name="hello_blank_fragment">Hello blank1 fragment</string>
    <string name="title_activity_phone">PhoneActivity</string>
    <string name="oneui_shortcut_instruction_title">使用说明</string>
    <string name="oneui_shortcut_instruction_summary">实时更新的使用说明</string>
    <string name="oneui_shortcut_preview_title">车机预览</string>
    <string name="oneui_shortcut_preview_summary">预览在Carlife中展示的应用界面</string>
    <string name="oneui_shortcut_app_title">添加应用</string>
    <string name="oneui_shortcut_app_summary">添加或删除应用抽屉中的应用</string>
    <string name="oneui_shortcut_music_title">设置音乐</string>
    <string name="oneui_shortcut_music_summary">管理音乐服务</string>
    <string name="oneui_shortcut_close_title">立即生效</string>
    <string name="oneui_shortcut_close_summary">更改设置后下次启动生效或点击按钮立即生效</string>
    <string name="oneui_shortcut_update_title">版本更新</string>
    <string name="oneui_shortcut_update_summary">发现版本更新</string>
    <string name="oneui_shortcut_donation_title">捐赠支持</string>
    <string name="oneui_shortcut_donation_summary">喜欢的话就捐赠以下噢</string>
    <string name="oneui_shortcut_settings_close">立即生效</string>
    <string name="oneui_shortcut_settings_basic">基础玩法</string>
    <string name="oneui_shortcut_carui_title">主界面</string>
    <string name="oneui_shortcut_carui_summary">自定义车联助手主界面</string>
    <string name="oneui_shortcut_settings_pro">专家玩机</string>
    <string name="oneui_shortcut_float_title">小白点助手</string>
    <string name="oneui_shortcut_float_summary">深受喜爱的小白点帮您完成快捷操作</string>
    <string name="oneui_shortcut_fullscreen_title">全屏助手</string>
    <string name="oneui_shortcut_fullscreen_summary">隐藏自带侧栏</string>
    <string name="oneui_shortcut_navbar_title">导航栏助手</string>
    <string name="oneui_shortcut_navbar_summary">替换覆盖原导航栏</string>
    <string name="oneui_shortcut_notification_title">通知助手</string>
    <string name="oneui_shortcut_notification_summary">提示通知</string>
    <string name="oneui_shortcut_launch_title">启动设置</string>
    <string name="oneui_shortcut_launch_summary">设置应用的启动方式与伴随启动</string>
    <string name="oneui_shortcut_settings_exp">实验测试</string>
    <string name="oneui_shortcut_lab_title">实验室功能</string>
    <string name="oneui_shortcut_lab_summary">更高级的功能不保证使用体验与Bug</string>
</resources>