<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.banqu.samsung.music.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_ui"
        android:name="com.banqu.samsung.music.SettingsActivity$SettingsUIFragment"
        android:label="@string/menu_ui" />


    <fragment
        android:id="@+id/nav_appDrawer"
        android:name="com.banqu.samsung.music.SettingsActivity$SettingsAppDrawerFragment"
        android:label="@string/menu_appDrawer"/>

    <fragment
        android:id="@+id/nav_musicHelper"
        android:name="com.banqu.samsung.music.SettingsActivity$SettingsMusicFragment"
        android:label="@string/menu_musicHelper" />
    <fragment
        android:id="@+id/nav_navbarHelper"
        android:name="com.banqu.samsung.music.SettingsActivity$SettingsGodFragment"
        android:label="@string/menu_navbarHelper" />
    <fragment
        android:id="@+id/nav_floatHelper"
        android:name="com.banqu.samsung.music.SettingsActivity$SettingsTaFragment"
        android:label="@string/menu_floatHelper" />
    <fragment
        android:id="@+id/nav_notificationHelper"
        android:name="com.banqu.samsung.music.SettingsActivity$SettingsNotificationFragment"
        android:label="@string/menu_notificationHelper" />
    <fragment
        android:id="@+id/nav_boot"
        android:name="com.banqu.samsung.music.SettingsActivity$SettingsBootFragment"
        android:label="@string/menu_boot" />

    <fragment
        android:id="@+id/nav_experiment"
        android:name="com.banqu.samsung.music.SettingsActivity$SettingsEXPFragment"
        android:label="@string/menu_experiment" />
    <fragment
        android:id="@+id/menu_fs"
        android:name="com.banqu.samsung.music.SettingsActivity$SettingsFsFragment"
        android:label="@string/menu_fs" />

</navigation>